Fixed sign up div being cut off #4

--- a/public/styles.index.css
+++ b/public/styles.index.css
@@ -22,7 +22,7 @@ input[type=number]:focus {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 80%
+    height: 100%
 }
 
 .center>form,
